<?xml version="1.0"?>
<package>
	<name>hrov_control</name>
	<version>1.0.0</version>
	<description>The hrov_control package</description>
	<maintainer email="garciaju@uji.es">Juan Carlos Garcia</maintainer>
	<license>BSD</license>
	<author email="garciaju@uji.es">Juan Carlos Garcia</author>
	<url>https://github.com/jcgarsan/uial</url>

	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>nodelet</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend> 
	<build_depend>actionlib</build_depend>
	<build_depend>actionlib_msgs</build_depend>
	<build_depend>thruster_control</build_depend>

	<run_depend>nodelet</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>thruster_control</run_depend>

</package>
